adding pics and link of Turner

--- a/pets.html
+++ b/pets.html
@@ -6,10 +6,13 @@
 
   <body>
     <h1>Turner</h1>
+
+    <img src="img/turner.jpeg" alt="My dog, Turner">
+    <a href="https://www.cesarsway.com/dog-behavior/innocuous-behaviors/common-dog-behaviors-explained"> Turner</a>
     <p>This is my favorite pet's information</p>
 
 
-    <h2>Turner's favorite toys</h2>
+    <h2>Turner's <em>favorite</em> toys</h2>
 
     <ul>
       <li>Teddy Bear</li>
@@ -18,7 +21,7 @@
       <li>Rubber Duck</li>
     </ul>
 
-    <h2>Turner's favorite activities</h2>
+    <h2>Turner's <strong>favorite</strong> activities</h2>
 
     <ul>
       <li>Sleeping on the bed</li>
