It will allow users to select the preferred background color using buttons.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>My favorite pet!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
 
   <body>
@@ -10,7 +14,6 @@
     <img src="img/turner.jpeg" alt="My dog, Turner">
     <a href="https://www.cesarsway.com/dog-behavior/innocuous-behaviors/common-dog-behaviors-explained"> Turner</a>
     <p>This is my favorite pet's information</p>
-
 
     <h2>Turner's <em>favorite</em> toys</h2>
 
@@ -28,6 +31,10 @@
       <li>Going for a walk</li>
       <li>Playing fetch</li>
     </ul>
+
+    <p>Choose a preferred background:</p>
+    <button class="btn-black" id="bg-black">Black</button>
+    <button class="btn-white" id="bg-white">White</button>
 
   </body>
 </html>
